works in rooms controller
